# automake-install-paths-test

./: .gitignore  Makefile.am  README.md  aip-main.c  configure.ac
